--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-logging.level.org.springframework=
+logging.level.org.springframework=info
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
